--- a/index.html
+++ b/index.html
@@ -10,55 +10,13 @@
 <div class="wrapper">
 	<!-- ヘッダー -->
 	<header class="header">
-		<h1 class="logo"><a href="index.html"><img src="images/logo.png"></a></h1>
+		<h1>わざしい</h1>
 	</header>
 	<!-- ヘッダー ここまで -->
 	<!-- メイン -->
 	<main>
-		<h2>手作りタルトと香り高い珈琲で、寛ぎのカフェタイムを</h2>
-		<img src="images/about-photo.jpg" width="" class="shop-photo">
-
-		<p>大海原を悠然と泳ぐクジラの姿を見たことがあるでしょうか。
-		そのゆったりとした動きや優しい眼差しを見ていると、慌ただしい日常が遠い世界のできごとのように感じられるのです。
-		時間が経つのも忘れて、ただただクジラを眺めてぼーっと過ごしたひとときの心の充実を、私は今も忘れません。</p>
-		<p>そんなゆったりとした時間を過ごせるカフェがあったら……そんな思いでつくったのが、このKUJIRA CAFEです。<br>
-		古材を活用した味わいのある内装、花と緑に囲まれたテラス。
-		旬の味覚をふんだんに使ったタルトやキッシュは、どれも手作りです。
-		コーヒーは注文をいただいてから焙煎し、挽きたての香りをお楽しみいただいております。</p>
-		
-		<h3>ペットOKのテラス席</h4>
-		<p>天気のいい日には、<a href="images/keyvisual.jpg" target="blank">自然を感じられるテラス席</a>もおすすめ。
-		テラス席のみ、ペットの同伴もOKです。おひとり様もお子様連れの方も、お気に入りのお席で、思い思いの時間をゆったりとお過ごしください。
-		皆さまのお越しを心よりお待ちしております。</p>
-
-		<p><strong>KUJIRA Cafe 店主</strong><br>
-		鯨井コウタ</p>
-		
-		<div class="clear"></div>
-		
-		<h2>店舗情報</h2>
-		<table class="info">
-		<tr>
-			<th>住所</th>
-			<td>〒199-9999 或留県九寺楽市九寺楽町3-30-8（<a href="https://www.google.co.jp/maps/">地図</a>）</td>
-		</tr>
-		<tr>
-			<th>電話番号</th>
-			<td>09-9280-2611</td>
-		</tr>
-		<tr>
-			<th>営業時間</th>
-			<td>10:00～22:00</td>
-		</tr>
-		<tr>
-			<th>定休日</th>
-			<td>水曜日・日曜日</td>
-		</tr>
-		<tr>
-			<th>ご予約</th>
-			<td>ご予約は、お電話より受け付けております。ご予約希望日時と人数をお知らせください。</td>
-		</tr>
-		</table>	
+		<h2>しいわざ</h2>
+			
 	</main>
 	<!-- メイン ここまで -->
 	<!-- フッター -->
@@ -68,4 +26,5 @@
 	<!-- フッター ここまで -->
 </div>
 </body>
+
 </html>
