--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 	<!-- メイン ここまで -->
 	<!-- フッター -->
 	<footer class="footer">
-		<p>&copy;Copyright KUJIRA Cafe. All rights reserved.</p>
+		<p>&copy;Copyright Wazashii. All rights reserved.</p>
 	</footer>
 	<!-- フッター ここまで -->
 </div>
 </body>
 
 </html>
+
